/*
 * Ouroboros - Copyright (C) 2016 - 2017
 *
 * Message for Connection Information in CACEP
 *
 *    Dimitri Staessens <dimitri.staessens@ugent.be>
 *    Sander Vrijders   <sander.vrijders@ugent.be>
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public License
 * version 2.1 as published by the Free Software Foundation.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 * 02110-1301 USA
 */

syntax = "proto2";

message cacep_msg {
        required string ae_name     = 1;
        required string protocol    = 2;
        required int32 pref_version = 3;
        repeated int32 supp_version = 4;
        required int32 pref_syntax  = 5;
        repeated int32 supp_syntax  = 6;
        required uint64 address     = 7;
}