/*
 * Ouroboros - Copyright (C) 2016 - 2017
 *
 * DIF config message
 *
 *    Dimitri Staessens <dimitri.staessens@intec.ugent.be>
 *    Sander Vrijders   <sander.vrijders@intec.ugent.be>
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public License
 * version 2.1 as published by the Free Software Foundation.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 * 02110-1301 USA
 */

syntax = "proto2";

message dif_config_msg {
        required string dif_name        =  1;
        required int32 ipcp_type        =  2;
        // Config for normal IPCP
        optional uint32 addr_size       =  3;
        optional uint32 cep_id_size     =  4;
        optional uint32 pdu_length_size =  5;
        optional uint32 seqno_size      =  6;
        optional bool has_ttl           =  7;
        optional bool has_chk           =  8;
        optional uint32 min_pdu_size    =  9;
        optional uint32 max_pdu_size    = 10;
        optional uint32 addr_auth_type  = 11;
        optional uint32 dt_gam_type     = 12;
        optional uint32 rm_gam_type     = 13;
        // Config for shim UDP
        optional uint32 ip_addr         = 14;
        optional uint32 dns_addr        = 15;
        // Config for the shim Ethernet LLC
        optional string if_name         = 16;
}